# losalamos

./: .gitignore  README.md  __add_books.py  __add_greys.py  __add_papers.py  __add_ref.py  __add_reference.py  __exploder.py  __update_templates.py  _extract_thesaurus.py  add_reference.py  clean_latex.py  docs.py  main.py  pyproject.toml  refs.py  refs_add.py  refs_update.py  requirements.txt  root.py  sapiens_update.py  testing.py  thesaurus_en.md  thesaurus_en.txt
_templates/base/: _item_fig.tex  _item_table.tex  _section_b.tex  _setup_citations.tex  _setup_colors.tex  _setup_glossaries.tex  _setup_language.tex  _setup_layout.tex  _setup_links.tex  _setup_sections.tex  cover.tex  glossary.tex  main.tex  refs.bib  specs.tex
_templates/paper/: _item_box.tex  _item_fig.tex  _item_text.tex  _item_text_L.tex  _setup_citations.tex  _setup_glossaries.tex  _setup_hf.tex  _setup_items.tex  _setup_language.tex  _setup_layout.tex  _setup_sections.tex  _setup_toc.tex  acronyms.tex  authors.csv  authors_affs.tex  authors_corr.tex  authors_credit.tex  authors_list.tex  conclusions.tex  cover-letter.docx  cover.tex  declarationStatement.docx  discussion.tex  highlights.docx  intro.tex  main.tex  manuscript.tex  methods.tex  misc.tex  preprint.tex  specs.tex  symbols.tex  title.docx
_templates/report/: _item_fig_left.tex  _section_a.tex  _section_fig.tex  _section_fig_pannel.tex  _section_fig_whole.tex  _section_i.tex  _setup_fonts.tex  _setup_hf.tex  _setup_items.tex  _setup_misc.tex  main.tex  (+8 more)
docs/: conf.py  usage.rst
losalamos/: docs.py  refs.csv  refs.py  root.py  zion.py
(+32 files in other folders)
