[project]
name = "losalamos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "numpy<2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
